# OCSMesh

./: .buildinfo  .gitignore  .gitmodules  .pylintrc  COPYING  Dockerfile  README.md  Vagrantfile  environment.yml  genindex.html  index.html  install.sh  objects.inv  ocsmesh.command_line.html  ocsmesh.geometry.html  ocsmesh.mesh.html  ocsmesh.size_function.html  ocsmesh.utilities.html  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: .pylintrc  documentation.yml  functional_test.yml  functional_test_2.yml  pylint.yml  release.yml
Tutorials/: ApplicationExample01.ipynb  ApplicationExample02.ipynb  OceanRegimeExample.ipynb
_sources/: index.rst.txt  ocsmesh.command_line.rst.txt  ocsmesh.size_function.rst.txt
_static/: documentation_options.js
docs/: requirements.txt
docs/source/: conf.py  index.rst  ocsmesh.command_line.rst  ocsmesh.geometry.rst  ocsmesh.mesh.rst  ocsmesh.utilities.rst
examples/: example_1.py  example_2.py  example_3.py
geomesh/: Hfun.py  Mesh.py  PlanarStraightLineGraph.py  UnstructuredMesh.py  __init__.py  __main__.py  _lib.py  cmd.py  dataset_collection.py  db.py  driver.py  figures.py  gdal_dataset.py  gdal_dataset_collection.py  gdal_tools.py  geom.py  geomeshd.py  hfun.py  interp.py  jigsaw_tools.py  logger.py  mesh.py  parallel_processing.py  pslg.py  raster.py  raster_collection.py  size_function.py  utils.py
geomesh/cmd/: __init__.py  cli.py  config.py  db.py  geom.py  mesh_upgrader.py  rasters.py  remesh.py  remesh_by_shape_factor.py
geomesh/collections/: __init__.py
geomesh/drivers/: Jigsaw.py  Triangle.py  __init__.py
geomesh/features/: channel.py  contour.py  patch.py
geomesh/geom/: __init__.py  base.py  collector.py  geom.py  mesh.py  raster.py  raster_geom.py  shapely.py  shapely_geom.py
geomesh/geom/types/: __init__.py  _base.py  _raster_geom_t.py  _shapely_geom_t.py
geomesh/hfun/: __init__.py  base.py  collector.py  hfun.py  hfun_raster.py  mesh.py  raster.py
geomesh/hfun/types/: __init__.py  _hfun_raster_t.py
geomesh/lib/: _SpatialReference.py  __init__.py
geomesh/mesh/: __init__.py  base.py  euclidean_mesh_2d.py  mesh.py
geomesh/mesh/parser/: grd.py  sms2dm.py
geomesh/mesh/parsers/: sms2dm.py
geomesh/operations/: __init__.py  combine_geom.py
geomesh/ops/: __init__.py  combine_geom.py  combine_hfun.py
geomesh/raster/: __init__.py  raster.py  raster_collection.py
ocsmesh/: __init__.py  __main__.py  cmd.py  crs.py  db.py  driver.py  figures.py  internal.py  interp.py  raster.py  utils.py
ocsmesh/cli/: __init__.py  cli.py  iter_filter_interpolate.py  mesh_upgrader.py  remesh.py  remesh_by_shape_factor.py  subset_n_combine.py
ocsmesh/cmd/: cli.py  remesh_by_shape_factor.py
ocsmesh/engines/: base.py  factory.py  gmsh.py  jigsaw.py  triangle.py
ocsmesh/features/: channel.py  constraint.py  contour.py  linefeature.py  patch.py
ocsmesh/geom/: __init__.py  base.py  collector.py  geom.py  mesh.py  raster.py  shapely.py
ocsmesh/hfun/: __init__.py  base.py  collector.py  hfun.py  mesh.py  raster.py
ocsmesh/mesh/: __init__.py  base.py  mesh.py
ocsmesh/mesh/parsers/: grd.py  sms2dm.py
ocsmesh/ops/: __init__.py  combine_geom.py  combine_hfun.py  combine_mesh.py  river_mesh.py
tests/: _test_teslak80.sh  example_1.py  test_Jigsaw.py  test_Triangle.py
tests/api/: __init__.py  collector_pickle.py  common.py  driver.py  engines.py  features.py  geom.py  hfun.py  hfun_pickle.py  internal.py  mesh.py  raster.py  size_from_mesh.py  test_combine_mesh.py  test_common.py  test_driver.py  test_engines.py  test_geom.py  test_hfun.py  test_internal.py  test_mesh.py  test_pickle.py  test_river_mesh.py  test_utils.py  utils.py
tests/cli/: build_geom.sh  build_hfun.sh  remesh_by_dem.sh  resmesh_by_dem.sh
tests/data/: diag_arcs_clipped.dbf  diag_arcs_clipped.shp  diag_arcs_clipped.shx  msht_buffer.2dm  patch.2dm  rm_poly.dbf  rm_poly.qmd  rm_poly.shp  rm_poly.shx
