[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=7", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages]
find = {}

[project]
name = "ocsmesh"
authors = [
    {name = "Felicio Cassalho", email = "felicio.cassalho@noaa.gov"},
    {name = "Soroosh Mani", email = "soroosh.mani@noaa.gov"},
    {name = "Jaime R Calzada", email = "jreniel@gmail.com"}
]
maintainers = [
    {name = "Felicio Cassalho", email = "felicio.cassalho@noaa.gov"}
]
description = "Package to generate computational unstructured meshes for ocean simulation."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = '>=3.9, <3.14' # 3.8 -> scipy
dependencies = [
    "colored-traceback<=0.3.0", 
    "fiona", "geopandas>=1.0.0",
    "matplotlib>=3.8", "netCDF4", "numba",
    "numpy>=1.21", # introduce npt.NDArray
    "pyarrow", "rtree", "pyproj>=3.0", "rasterio", "scipy",
    "shapely", "typing_extensions", "utm",
    ]
dynamic = ["version"]

[project.urls]
Documentation = "https://noaa-ocs-modeling.github.io/OCSMesh/"
Source = "https://github.com/noaa-ocs-modeling/OCSMesh/"

[project.scripts]
ocsmesh = "ocsmesh.__main__:main"

[project.optional-dependencies]
gmsh = ["gmsh"]
jigsaw = ["jigsawpy"]
triangle = ["triangle"]
testing = ['pylint>=2.14', 'jigsawpy', 'triangle','gmsh']
documentation = [
    'sphinx < 7.0.0', # due to sphinx_rtd_theme support
    'sphinx-rtd-theme', 'sphinx-argparse',
    'mistune==0.8.4', 'm2r2', 'numpydoc',
    'jigsawpy', 'triangle', 'gmsh'
]
