[metadata]
name = ocsmesh
version = 0.1.1
author = Jaime R Calzada, Soroosh Mani
lead_developer = Jaime R Calzda
author_email = jreniel@gmail.com soroosh.mani@noaa.gov
description = Package to generate computational unstructured meshes from planetary modeling.
long_description = file: README.md
license = GPL
url =

[nosetests]
exe = True
tests = tests/
