[metadata]
name = ocsmesh
version = 0.1.1
author = Jaime R Calzada, Soroosh Mani
original_author = Jaime R Calzda
author_email = jreniel@gmail.com soroosh.mani@noaa.gov
lead_developer = Soroosh Mani
description = Package to generate computational unstructured meshes from planetary modeling.
long_description = file: README.md
license = CC0
url =

[nosetests]
exe = True
tests = tests/

[flake8]
ignore = E501,E226,W503