[metadata]
name = ocsmesh
author = Jaime R Calzada, Soroosh Mani
original_author = Jaime R Calzda
author_email = jreniel@gmail.com, soroosh.mani@noaa.gov
lead_developer = Soroosh Mani
description = Package to generate computational unstructured meshes from planetary modeling.
long_description = file: README.md
license = CC0
url =
setup_requires = 'wheel', 'numpy', 'dunamai'

[nosetests]
exe = True
tests = tests/
